API定義修正
